@@ -3,6 +3,7 @@
 ## Backyard 0.X.X
 Released on ...
 
+- Correct media source of global background SVGs
 - Show IDs of input options in grid
 
 ## Backyard 0.9.2
